--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-flet>=0.7.0,<0.9.0
-langchain-google-genai>=0.0.5
-google-generativeai>=0.3.0
-langchain>=0.0.267
+PyQt5>=5.15.0
+langchain-groq
+python-dotenv
+pydantic
+langchain
